--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,15 +1,20 @@
+assembly-versioning-scheme: MajorMinorPatch
+mode: ContinuousDeployment
 next-version: 1.0.0
 branches:
   main: 
     regex: ^main$
     increment: Major
     tag: main
+    mode: ContinuousDeployment
     source-branches: ['develop', 'feature']
   develop:
     regex: ^develop$
+    mode: ContinuousDeployment
     increment: Minor
     tag: develop
   feature:
     regex: ^feature$
+    mode: ContinuousDeployment
     increment: Patch
     tag: feature
