--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -29,7 +29,7 @@ branches:
     pre-release-weight: 0
   main:
     mode: ContinuousDeployment
-    tag: 'main'
+    tag: ''
     increment: Minor
     prevent-increment-of-merged-branch-version: true
     track-merge-target: true
